# serializer version: 1
# name: test_event_entities[event.test_league_player_scoring-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'points_changed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.test_league_player_scoring',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Player scoring',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Player scoring',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'player_scoring',
    'unique_id': '123456789_1397743357073084416_player_scoring',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entities[event.test_league_player_scoring-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'points_changed',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Player scoring',
    }),
    'context': <ANY>,
    'entity_id': 'event.test_league_player_scoring',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_event_entities[event.wombats_league_player_scoring-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'points_changed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.wombats_league_player_scoring',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Player scoring',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Player scoring',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'player_scoring',
    'unique_id': '123456789_1392910061486997504_player_scoring',
    'unit_of_measurement': None,
  })
# ---
# name: test_event_entities[event.wombats_league_player_scoring-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EventEntityStateAttribute.EVENT_TYPE: 'event_type'>: None,
      <EventEntityCapabilityAttribute.EVENT_TYPES: 'event_types'>: list([
        'points_changed',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Player scoring',
    }),
    'context': <ANY>,
    'entity_id': 'event.wombats_league_player_scoring',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
